--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: android
 jdk: oraclejdk8
 sudo: required
+before_install:
+    - yes | sdkmanager "platforms;android-29"
 env:
  global:
     - ANDROID_API_LEVEL=29
