--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,21 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".timings.TimingsHomeActivity"
+        <activity android:name=".opac.OPACAccountActivity"
+            android:label="My account"
+            android:parentActivityName=".opac.OPACHomeActivity"/>
+        <activity
+            android:name=".opac.EResourcesActivity"
+            android:label="E-Resources"
+            android:parentActivityName=".opac.OPACHomeActivity" />
+        <activity
+            android:name=".opac.OPACHomeActivity"
+            android:label="Library OPAC"
+            android:parentActivityName=".activities.LaunchingActivity" />
+        <activity
+            android:name=".timings.TimingsHomeActivity"
             android:label="Timings"
-            android:parentActivityName=".activities.LaunchingActivity"/>
+            android:parentActivityName=".activities.LaunchingActivity" />
         <activity
             android:name=".opac.BookDetailActivity"
             android:label="Book Details"
@@ -44,7 +56,7 @@
             android:name=".opac.SearchResultsActivity"
             android:label="Search Results"
             android:launchMode="singleTop"
-            android:parentActivityName=".opac.OPACSearchActivity" />
+            android:parentActivityName=".opac.OPACHomeActivity" />
         <activity
             android:name=".opac.OPACSearchActivity"
             android:label="OPAC Search"
@@ -77,8 +89,7 @@
             android:name=".aumsV2.activities.LoginActivity"
             android:label="AUMS - Login"
             android:parentActivityName=".activities.LaunchingActivity" />
-        <activity
-            android:name=".timings.ShuttleBusTimingsActivity" />
+        <activity android:name=".timings.ShuttleBusTimingsActivity" />
         <activity
             android:name=".faq.ExamsFAQActivity"
             android:parentActivityName=".activities.LaunchingActivity" />
