--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,9 @@
             android:name=".aumsV2.activities.LoginActivity"
             android:label="AUMS - Login"
             android:parentActivityName=".activities.LaunchingActivity" />
-        <activity android:name=".timings.ShuttleBusTimingsActivity" />
+        <activity android:name=".timings.ShuttleBusTimingsActivity"
+            android:label="Timings"
+            android:parentActivityName=".timings.TimingsHomeActivity"/>
         <activity
             android:name=".faq.ExamsFAQActivity"
             android:parentActivityName=".activities.LaunchingActivity" />
