Adds contributors activity
Signed-off-by: Rajkumar S <rajkumaar2304@icloud.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2020 RAJKUMAR S
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="in.co.rajkumaar.amritarepo">
@@ -21,9 +25,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".opac.OPACAccountActivity"
+        <activity
+            android:name=".about.ContributorsActivity"
+            android:label="Open Source Contributors"
+            android:parentActivityName=".about.AboutActivity" />
+        <activity
+            android:name=".opac.OPACAccountActivity"
             android:label="My account"
-            android:parentActivityName=".opac.OPACHomeActivity"/>
+            android:parentActivityName=".opac.OPACHomeActivity" />
         <activity
             android:name=".opac.EResourcesActivity"
             android:label="E-Resources"
@@ -144,8 +153,7 @@
         <activity
             android:name=".timetable.AcademicTimetableActivity"
             android:label="Academic Timetable"
-            android:parentActivityName=".activities.LaunchingActivity"
-            android:screenOrientation="portrait" />
+            android:parentActivityName=".activities.LaunchingActivity" />
 
         <provider
             android:name=".helpers.GenericFileProvider"
@@ -172,7 +180,7 @@
             android:label="Faculty Timetable"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.LaunchingActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".activities.WebViewActivity"
             android:parentActivityName=".timetable.AcademicTimetableActivity" />
@@ -205,7 +213,7 @@
             android:name=".aums.activities.HomeActivity"
             android:label="AUMS Home"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".aums.activities.AttendanceActivity"
             android:label="Attendance Status"
