--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) 2020 RAJKUMAR S
+ */
+
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.oss.licenses.plugin'
@@ -68,19 +72,17 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     implementation 'joda-time:joda-time:2.9.4'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation "com.google.firebase:firebase-iid:20.1.2"
-    implementation 'com.google.firebase:firebase-messaging:20.1.3'
-    implementation 'com.google.firebase:firebase-core:17.2.3'
+    implementation "com.google.firebase:firebase-iid:20.0.2"
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
-    implementation 'nl.dionsegijn:konfetti:1.1.3'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61'
     implementation("org.solovyev.android:checkout:1.2.1", {
         exclude group: "com.google.code.findbugs", module: "jsr305"
     })
@@ -92,5 +94,11 @@ dependencies {
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.jrvansuita:MaterialAbout:0.2.3'
+    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
+
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
 }
