--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2020 RAJKUMAR S
   -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="in.co.rajkumaar.amritarepo">
@@ -23,6 +25,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
+        <activity
+            android:name=".notifications.NotificationsActivity"
+            android:label="Notifications"
+            android:parentActivityName=".activities.LaunchingActivity" />
         <activity
             android:name=".about.activities.ContributorsActivity"
             android:label="Open Source Contributors"
