--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2020 RAJKUMAR S
-  -->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="in.co.rajkumaar.amritarepo">
@@ -25,6 +21,8 @@
         android:theme="@style/Theme.App.Dark"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
+        <activity android:name=".aums.activities.CoursesActivity"></activity>
+        <activity android:name=".aums.activities.CourseResourcesActivity" />
         <activity
             android:name=".notifications.NotificationsActivity"
             android:label="Notifications"
