--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
     }
     defaultConfig {
         applicationId "in.co.rajkumaar.amritarepo"
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 66
         versionName "4.2.2"
@@ -101,5 +101,6 @@ dependencies {
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.security:security-crypto:1.0.0-rc01"
 
 }
