--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     implementation 'com.github.jrvansuita:MaterialAbout:0.2.3'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
+    implementation "androidx.security:security-crypto:1.0.0-rc01"
 
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
