--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
         buildConfigField "String", "PLAY_LICENSE_KEY", "\"${props.getProperty("googlePlayLicenseKey")}\""
         buildConfigField "String", "SECRET_HASH", "\"${props.getProperty("secretHash")}\""
         buildConfigField "String", "PROXY_URL", "\"${props.getProperty("proxyURL")}\""
-        buildConfigField "String", "LIB_CATALOG", "\"${props.getProperty("libCatalog")}\""
+        buildConfigField "String", "LIB_CATALOG", "\"http://117.240.224.26:4310/app/library-catalog\""
 
     }
     buildTypes {
@@ -61,16 +61,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'joda-time:joda-time:2.9.4'
+    implementation 'joda-time:joda-time:2.10.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0')
     androidTestImplementation 'androidx.test:rules:1.2.0'
-    implementation 'joda-time:joda-time:2.9.4'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.android.volley:volley:1.1.1'
     implementation "com.google.firebase:firebase-iid:20.0.2"
