--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     implementation 'com.github.jrvansuita:MaterialAbout:0.2.3'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
-    implementation "androidx.security:security-crypto:1.0.0-rc01"
+    implementation 'at.favre.lib:armadillo:0.11.0'
 
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
