--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ try {
 
 android {
     compileSdkVersion 29
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
