--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ try {
 
 android {
     compileSdkVersion 29
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
@@ -96,7 +100,7 @@ dependencies {
     implementation 'com.github.jrvansuita:MaterialAbout:0.2.3'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
-    implementation "androidx.security:security-crypto:1.0.0-rc01"
+    implementation 'at.favre.lib:armadillo:0.11.0'
 
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
