--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
     implementation 'at.favre.lib:armadillo:0.11.0'
+    implementation 'com.google.android.play:core:1.7.3'
 
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
