--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ android {
     }
     defaultConfig {
         applicationId "in.co.rajkumaar.amritarepo"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
-        versionCode 68
-        versionName "4.3.1"
+        versionCode 69
+        versionName "4.3.2"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -101,6 +101,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
     implementation 'at.favre.lib:armadillo:0.11.0'
+    implementation 'com.google.android.play:core:1.7.3'
 
     def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
