--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,7 @@ captures/
 .idea/caches
 
 # Keystore files
-# Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
+*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -66,3 +65,4 @@ fastlane/test_output
 fastlane/readme.md
 
 *.properties
+/api-service-account.json
