Add share feature for downloaded files (#73)
Signed-off-by: Rajkumar S <rajkumaar2304@icloud.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
   
   playstore-release:
     name: PlayStore Release
-    needs: build
+    needs: github-release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
