--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,7 +111,7 @@
             android:name=".faq.ExamsFAQActivity"
             android:parentActivityName=".activities.LaunchingActivity" />
 
-        <receiver android:name=".widgets.ImageWidget">
+        <receiver android:name=".widgets.ImageWidget" android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -128,7 +128,7 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
 
-        <service android:name=".helpers.MyFirebaseMessagingService">
+        <service android:name=".helpers.MyFirebaseMessagingService" android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
@@ -138,6 +138,7 @@
             android:name=".activities.LaunchingActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
+            android:exported="true"
             android:theme="@style/Theme.App.NoActionBar.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
